Start FullTripActivity after click on trip item.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity
             android:name="TripsActivity">
         </activity>
+        <activity
+            android:name="FullTripActivity">
+        </activity>
     </application>
 
 </manifest>
