--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,15 @@
+buildscript {
+    ext.kotlin_version = '1.0.1'
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 23
@@ -27,4 +38,5 @@ dependencies {
     compile "com.squareup.retrofit2:retrofit:2.0.0"
     compile "com.squareup.retrofit2:adapter-rxjava:2.0.0"
     compile "com.squareup.retrofit2:converter-gson:2.0.0"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
