--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.0.1'
+    ext.espresso_version = '2.2.2'
     repositories {
         jcenter()
     }
@@ -21,12 +22,16 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    packagingOptions {
+        exclude 'LICENSE.txt'
     }
 }
 
@@ -39,4 +44,25 @@ dependencies {
     compile "com.squareup.retrofit2:adapter-rxjava:2.0.0"
     compile "com.squareup.retrofit2:converter-gson:2.0.0"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_version") {
+        exclude group: 'com.android.support'
+    }
+    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$espresso_version") {
+        exclude group: 'com.android.support'
+    }
+    androidTestCompile("com.android.support.test.espresso:espresso-intents:$espresso_version") {
+        exclude group: 'com.android.support'
+    }
+    androidTestCompile('org.mockito:mockito-core:1.10.19') {
+        exclude group: 'org.hamcrest'
+    }
+    androidTestCompile('com.google.dexmaker:dexmaker:1.2') {
+        exclude group: 'org.hamcrest'
+    }
+    androidTestCompile('com.google.dexmaker:dexmaker-mockito:1.2') {
+        exclude group: 'org.hamcrest'
+    }
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
