--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".trip.list.TripsActivity"></activity>
         <activity android:name=".trip.details.FullTripActivity"></activity>
+        <activity android:name=".trip.create.NewTripActivity"></activity>
     </application>
 
 </manifest>
