Add NewTripRouteActivity with DatePicker.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity android:name=".trip.list.TripsActivity"></activity>
         <activity android:name=".trip.details.FullTripActivity"></activity>
-        <activity android:name=".trip.create.NewTripActivity"></activity>
+        <activity android:name=".trip.create.NewTripRouteActivity"></activity>
     </application>
 
 </manifest>
