Make FullTripActivity abstract class.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".trip.list.TripsActivity"></activity>
-        <activity android:name=".trip.details.FullTripActivity"></activity>
+        <activity android:name=".trip.details.NewFullTripActivity"></activity>
+        <activity android:name=".trip.details.SelectedFullTripActivity"></activity>
         <activity android:name=".trip.create.NewTripRouteActivity"></activity>
         <activity android:name=".trip.create.NewTripOfferActivity"></activity>
     </application>
