Add edit trip offer activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".trip.create.NewTripRouteActivity"></activity>
         <activity android:name=".trip.create.NewTripOfferActivity"></activity>
         <activity android:name=".trip.create.EditTripRouteActivity"></activity>
+        <activity android:name=".trip.create.EditTripOfferActivity"></activity>
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
