--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
         <activity
             android:name=".login.LoginActivity"
             android:label="@string/app_name">
@@ -20,20 +22,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".trip.list.TripsActivity"></activity>
-        <activity android:name=".trip.details.NewFullTripActivity"></activity>
-        <activity android:name=".trip.details.SelectedOtherFullTripActivity"></activity>
-        <activity android:name=".trip.details.SelectedMyFullTripActivity"></activity>
-        <activity android:name=".trip.details.UpdatedFullTripActivity"></activity>
-        <activity android:name=".trip.create.NewTripRouteActivity"></activity>
-        <activity android:name=".trip.create.NewTripOfferActivity"></activity>
-        <activity android:name=".trip.create.EditTripRouteActivity"></activity>
-        <activity android:name=".trip.create.EditTripOfferActivity"></activity>
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
+        <activity
+            android:name=".trip.list.TripsActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name=".trip.details.NewFullTripActivity"/>
+        <activity android:name=".trip.details.SelectedOtherFullTripActivity"/>
+        <activity android:name=".trip.details.SelectedMyFullTripActivity"/>
+        <activity android:name=".trip.details.UpdatedFullTripActivity"/>
+        <activity android:name=".trip.create.NewTripRouteActivity"/>
+        <activity android:name=".trip.create.NewTripOfferActivity"/>
+        <activity android:name=".trip.create.EditTripRouteActivity"/>
+        <activity android:name=".trip.create.EditTripOfferActivity"/>
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
     </application>
 
 </manifest>
